--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,4 @@
-/**app.wxss**/
+@import "./styles/iconfont.wxss";
 .container {
   height: 100%;
   display: flex;
@@ -8,3 +8,7 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+page{
+  --themeColor: #12a8a9;
+  font-size: 28rpx;
+}
