--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,6 +1,11 @@
-<swiper indicator-dots="true" indicator-active-color="#12a8a9" autoplay="true" circular="true">
-    <swiper-item><navigator url="/pages/index/index" open-type="redirect"><image mode="widthFix" src="https://i.loli.net/2021/11/30/BPpRYsO6VWvqceN.png"/></navigator></swiper-item>
-    <swiper-item><navigator url="/pages/index/index" open-type="redirect"><image mode="widthFix" src="https://i.loli.net/2021/11/30/xXKkJyB8rNzW1AV.png"/></navigator></swiper-item>
-    <swiper-item><navigator url="/pages/index/index" open-type="redirect"><image mode="widthFix" src="https://i.loli.net/2021/11/30/4So3ZJcOUmsj57k.png"/></navigator></swiper-item>
-    <swiper-item><navigator url="/pages/index/index" open-type="redirect"><image mode="widthFix" src="https://i.loli.net/2021/11/30/gYG3FwXjtyKTU28.png"/></navigator></swiper-item>
-</swiper>
+<view class="home">
+    <SearchInput></SearchInput>
+</view>
+<view class="advertising">
+    <swiper indicator-dots="true" indicator-active-color="#12a8a9" autoplay="true" circular="true">
+        <swiper-item><navigator url="/pages/index/inedx" open-type="redirect"><image mode="widthFix" src="https://i.loli.net/2021/11/30/BPpRYsO6VWvqceN.png"/></navigator></swiper-item>
+        <swiper-item><navigator url="/pages/index/index" open-type="redirect"><image mode="widthFix" src="https://i.loli.net/2021/11/30/xXKkJyB8rNzW1AV.png"/></navigator></swiper-item>
+        <swiper-item><navigator url="/pages/index/index" open-type="redirect"><image mode="widthFix" src="https://i.loli.net/2021/11/30/4So3ZJcOUmsj57k.png"/></navigator></swiper-item>
+        <swiper-item><navigator url="/pages/index/index" open-type="redirect"><image mode="widthFix" src="https://i.loli.net/2021/11/30/gYG3FwXjtyKTU28.png"/></navigator></swiper-item>
+    </swiper>
+</view>
