商品详情、商品动态搜索

--- a/pages/classify/classify.wxml
+++ b/pages/classify/classify.wxml
@@ -1,2 +1,3 @@
-<!--pages/classify/classify.wxml-->
-<text>pages/classify/classify.wxml</text>
+<view class="classfiy">
+  <SearchInput></SearchInput>
+</view>
