--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,1 +1,49 @@
-/* pages/search/search.wxss */
+page {
+  background-color: #b1d4d1;
+}
+.search_row {
+  height: 80rpx;
+  display: flex;
+  margin-left: 10rpx;
+  margin-right: 10rpx;
+  margin-top: 6rpx;
+}
+.search_row input {
+  background-color: white;
+  flex: 1;
+  height: 100%;
+  border-radius: 10rpx;
+  padding-left: 10rpx;
+}
+.search_row button {
+  background-color: white;
+  height: 100%;
+  font-size: 28rpx;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10rpx;
+  color: #0e3a3a;
+}
+.search_content .search_item {
+  display: flex;
+  text-align: left;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.search_content .search_item navigator {
+  padding: 20rpx;
+  margin: 10rpx;
+  border-color: white;
+  background-color: white;
+  border-style: solid;
+  border-radius: 30rpx;
+  flex: 1 0 38%;
+  flex-wrap: wrap;
+}
+.search_content .search_item navigator .text_view {
+  display: flex;
+  flex-direction: column;
+}
+.search_content .search_item navigator .price {
+  color: red;
+}
