--- a/components/SearchInput/SearchInput.wxml
+++ b/components/SearchInput/SearchInput.wxml
@@ -1,3 +1,3 @@
 <view class="search_input">
-    <navigator url="/pages/search/search" open-type="">搜索</navigator>
+    <navigator url="../../pages/search/search" open-type="navigate">搜索</navigator>
 </view>
