--- a/styles/iconfont.wxss
+++ b/styles/iconfont.wxss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2981120 */
-  src: url('//at.alicdn.com/t/font_2981120_40cf8w7qucj.woff2?t=1638369724784') format('woff2'),
-       url('//at.alicdn.com/t/font_2981120_40cf8w7qucj.woff?t=1638369724784') format('woff'),
-       url('//at.alicdn.com/t/font_2981120_40cf8w7qucj.ttf?t=1638369724784') format('truetype');
+  src: url('//at.alicdn.com/t/font_2981120_gfmfhlz4thl.woff2?t=1638542901275') format('woff2'),
+       url('//at.alicdn.com/t/font_2981120_gfmfhlz4thl.woff?t=1638542901275') format('woff'),
+       url('//at.alicdn.com/t/font_2981120_gfmfhlz4thl.ttf?t=1638542901275') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-dianpu:before {
+  content: "\e604";
 }
 
 .icon-fenxiang:before {
