--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -1,1 +1,123 @@
-/* pages/cart/cart.wxss */
+page {
+  padding-bottom: 90rpx;
+  background-color: #12a8a9;
+}
+.cart_content .cart_main {
+  padding-left: 24rpx;
+  padding-right: 24rpx;
+}
+.cart_content .cart_main .shop_wrap {
+  background-color: white;
+  padding-top: 20rpx;
+  margin-bottom: 18rpx;
+  border-radius: 18rpx;
+}
+.cart_content .cart_main .shop_wrap .shop {
+  display: flex;
+  padding-bottom: 10rpx;
+}
+.cart_content .cart_main .shop_wrap .shop .shop_check_wrap {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart_content .cart_main .shop_wrap .shop .shop_name {
+  flex: 5;
+  font-size: 34rpx;
+}
+.cart_content .cart_main .shop_wrap .cart_item {
+  display: flex;
+  padding: 10rpx;
+  border-bottom: 1px solid #12a8a9;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_check_wrap {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_imt_wrap {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_imt_wrap image {
+  width: 200rpx;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap {
+  flex: 4;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_name {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  color: #666;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap {
+  display: flex;
+  justify-content: space-between;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap .goods_price {
+  color: #c93636;
+  font-size: 34rpx;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap .cart_bum_tool {
+  display: flex;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap .cart_bum_tool .num_edit {
+  width: 56rpx;
+  height: 56rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1rpx solid #ccc;
+  border-radius: 10rpx;
+}
+.cart_content .cart_main .shop_wrap .cart_item .cart_info_wrap .goods_price_wrap .cart_bum_tool .goods_num {
+  width: 56rpx;
+  height: 56rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer_tool {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 90rpx;
+  background-color: white;
+  display: flex;
+}
+.footer_tool .all_check_wrap {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer_tool .total_price_wrap {
+  flex: 4;
+  text-align: right;
+  padding-right: 16rpx;
+}
+.footer_tool .total_price_wrap .total_price text.total_price_text {
+  color: #c93636;
+  font-size: 34rpx;
+}
+.footer_tool .order_pay_wrap {
+  flex: 3;
+  background-color: #c93636;
+  color: #fff;
+  font-size: 34rpx;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10rpx;
+}
