--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -30,6 +30,8 @@
         <view>购物车</view>
     </navigator>
     <view class="tool_item button_cart">
-        <view>加入购物车</view>
+        <navigator bindtap="addCart">
+            <view>加入购物车</view>
+        </navigator>
     </view>
 </view>
