--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -56,7 +56,7 @@
     <view class="total_price">
       合计: <text class="total_price_text">￥{{totalPrice}}</text>
     </view>
-    <view>包含运费</view>
+    <view>不包含运费</view>
   </view>
   <!-- 结算 -->
   <view class="order_pay_wrap" bindtap="pay">
