--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,7 +1,10 @@
 <view class="detail_picture">
-    <image mode="widthFix" src="{{goodobject.goodsImage}}"/>
+    <image mode="widthFix" src="{{goodobject.goodsImage}}" />
 </view>
-<view class="goodprice">￥{{goodobject.goodsPrice}}</view>
+<view class="goodprice" wx:if="{{goodobject.goodsRealPrice == 0}}">￥{{goodobject.goodsPrice}}</view>
+<view class="goodprice" wx:if="{{goodobject.goodsRealPrice != 0}}" style="text-decoration: line-through; ">
+    ￥{{goodobject.goodsPrice}}</view>
+<view class="goodprice" wx:if="{{goodobject.goodsRealPrice != 0}}">￥{{goodobject.goodsRealPrice}}</view>
 <view class="detail_description">
     <view class="goodsname">{{goodobject.goodsName}}</view>
     <view class="goodscollect">
