--- a/pages/allorder/allorder.less
+++ b/pages/allorder/allorder.less
@@ -132,6 +132,16 @@ page{
                     }
                 }
             }
+            .btn_wrap{
+                padding-top: 16rpx;
+                padding-bottom: 16rpx;
+                .commit_btn{
+
+                }
+                .returns_btn{
+
+                }
+            }
         }
 
     }
