--- a/pages/allorder/allorder.wxss
+++ b/pages/allorder/allorder.wxss
@@ -116,6 +116,10 @@ page {
   font-size: 34rpx;
   color: #c93636;
 }
+.cart_content .cart_main .shop_wrap .btn_wrap {
+  padding-top: 16rpx;
+  padding-bottom: 16rpx;
+}
 .footer_tool {
   position: fixed;
   bottom: 0;
