--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -56,7 +56,7 @@
         <view class="exchanged_order">
             <navigator>
                 <image src="https://s2.loli.net/2021/12/14/V2TeSDMA9CIgX7O.png"></image>
-                <view>退换货</view>
+                <view>售后</view>
             </navigator>
         </view>
     </view>
