--- a/pages/my/my.less
+++ b/pages/my/my.less
@@ -105,6 +105,9 @@ page{
             .exchanged_order{
                 flex:1;
             }
+            .evaluate_order{
+                flex:1;
+            }
         }
     }
     .address_wrap{
