--- a/pages/after-sales/after-sales.less
+++ b/pages/after-sales/after-sales.less
@@ -21,6 +21,13 @@ page{
         
       }
     }
+    .type_wrap{
+      padding-bottom: 10rpx;
+      padding-left: 10rpx;
+      .type_title{
+        margin-bottom: 10rpx;
+      }
+    }
     .descript_wrap{
       flex: 2;
       padding-top: 20rpx;
