--- a/pages/allorder/allorder.wxml
+++ b/pages/allorder/allorder.wxml
@@ -2,63 +2,72 @@
     <view class="cart_main">
         <block wx:if="{{order.length!=0}}">
             <view class="shop_wrap" wx:for="{{order}}" wx:key="{{orderId}}">
-                <navigator url="../../pages/orderdetail/orderdetail?orderId={{item.orderId}}">
-                    <view class="shop">
-                        <view class="shop_name">
-                            <navigator>
-                                <view class="shopname">
-                                    {{item.shop.shopName}}
+
+                <view class="shop">
+                    <view class="shop_name">
+                        <navigator>
+                            <view class="shopname">
+                                {{item.shop.shopName}}
+                            </view>
+                        </navigator>
+                    </view>
+                </view>
+                <view class="cart_item" wx:for="{{item.goodsList}}" wx:key="{{goods.goodsId}}" wx:for-item="j">
+                    <navigator url="../../pages/orderdetail/orderdetail?orderId={{item.orderId}}">
+                        <view class="cartarea">
+                            <!-- 商品图片 -->
+                            <navigator class="cart_imt_wrap"
+                                url="../../pages/detail/detail?goodsId={{j.goods.goodsId}}">
+                                <image mode="widthFix" src="{{j.goods.goodsImage}}"></image>
+                            </navigator>
+                            <!-- 商品信息 -->
+                            <view class="cart_info_wrap">
+                                <view class="goods_name">{{j.goods.goodsName}}</view>
+                                <view class="goods_price_wrap">
+                                    <view class="goods_price">￥{{j.goods.goodsPrice}}</view>
+                                    <view class="cart_bum_tool">
+                                        <view class="goods_num">×{{j.goodsNum}}</view>
+                                    </view>
                                 </view>
+                            </view>
+                        </view>
+                    </navigator>
+                    <view class="btn_area" wx:if="{{item.orderStatus == '已收货'}}">
+                        <!-- 退换货按钮，当订单状态为已收货时出现 -->
+                        <view class="returns_btn">
+                            <!-- <button class="returns" size="mini" bindTap="Toafter_sales">售后</button> -->
+                            <navigator class="returns"
+                                url="../../pages/after-sales/after-sales?orderId={{item.orderId}}&goodsId={{j.goods.goodsId}}">
+                                售后
                             </navigator>
                         </view>
-                    </view>
-                    <view class="cart_item" wx:for="{{item.goodsList}}" wx:key="{{goods.goodsId}}" wx:for-item="j">
-
-                        <!-- 商品图片 -->
-                        <navigator class="cart_imt_wrap" url="../../pages/detail/detail?goodsId={{j.goods.goodsId}}">
-                            <image mode="widthFix" src="{{j.goods.goodsImage}}"></image>
-                        </navigator>
-                        <!-- 商品信息 -->
-                        <view class="cart_info_wrap">
-                            <view class="goods_name">{{j.goods.goodsName}}</view>
-                            <view class="goods_price_wrap">
-                                <view class="goods_price">￥{{j.goods.goodsPrice}}</view>
-                                <view class="cart_bum_tool">
-                                    <view class="goods_num">×{{j.goodsNum}}</view>
-                                </view>
-                            </view>
-                        </view>
-                    </view>
-                    <view class="order_Info">
-                        <view class="order_id_info">
-                            <view class="order_id">
-                                <text>订单号:</text>
-                                <text class="orderid">{{item.orderId}}</text>
-                            </view>
-                        </view>
-                        <view class="order_total_price">
-                            <view class="original_price"><text>原价: </text><text
-                                    class="num">{{item.goodTotalPrices}}</text>
-                            </view>
-                            <view class="real_price"><text>实付: </text><text class="num">{{item.actuaLAmountPaid}}</text>
-                            </view>
-                        </view>
-                    </view>
-                    <view class="btn_wrap">
-                        <!-- 确认收货按钮，当订单状态为待收货时出现 -->
-                        <view class="commit_btn" wx:if="{{item.orderStatus == '待收货'}}">
-                            <button class="commit" type="primary" size="mini">确认收货</button>
-                        </view>
-                        <!-- 退换货按钮，当订单状态为已收货时出现 -->
-                        <view class="returns_btn" wx:if="{{item.orderStatus == '已收货'}}">
-                            <button class="returns" size="mini">售后</button>
-                        </view>
                         <!-- 当订单状态为已收货时出现 -->
-                        <view class="evaluate_btn" wx:if="{{item.orderStatus == '已收货'}}">
-                            <button class="evaluate" size="mini">评价</button>
+                        <view class="evaluate_btn">
+                            <!-- <button class="evaluate" size="mini">评价</button> -->
+                            <navigator class="evaluate" url="">评价</navigator>
                         </view>
                     </view>
-                </navigator>
+                </view>
+                <view class="order_Info">
+                    <view class="order_id_info">
+                        <view class="order_id">
+                            <text>订单号:</text>
+                            <text class="orderid">{{item.orderId}}</text>
+                        </view>
+                    </view>
+                    <view class="order_total_price">
+                        <view class="original_price"><text>原价: </text><text class="num">{{item.goodTotalPrices}}</text>
+                        </view>
+                        <view class="real_price"><text>实付: </text><text class="num">{{item.actuaLAmountPaid}}</text>
+                        </view>
+                    </view>
+                </view>
+                <view class="btn_wrap">
+                    <!-- 确认收货按钮，当订单状态为待收货时出现 -->
+                    <view class="commit_btn" wx:if="{{item.orderStatus == '待收货'}}">
+                        <button class="commit" type="primary" size="mini">确认收货</button>
+                    </view>
+                </view>
             </view>
         </block>
     </view>
