--- a/pages/evaluation/evaluation.wxss
+++ b/pages/evaluation/evaluation.wxss
@@ -1,1 +1,96 @@
-/* pages/evaluation/evaluation.wxss */
+page {
+  padding-bottom: 90rpx;
+  background-color: #cddfdf;
+}
+.page {
+  font-size: 32rpx;
+}
+.page .contain {
+  display: flex;
+  flex-direction: column;
+  padding: 20rpx;
+  border-radius: 10rpx;
+  background-color: white;
+  margin: 18rpx;
+}
+.page .contain .rate_wrap {
+  padding-top: 20rpx;
+  padding-bottom: 20rpx;
+}
+.page .contain .rate_wrap .rate_group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.page .contain .rate_wrap .rate_group .rate_item {
+  padding: 10rpx;
+}
+.page .contain .descript_wrap {
+  flex: 2;
+  padding-top: 20rpx;
+  padding-bottom: 20rpx;
+}
+.page .contain .descript_wrap .descript {
+  padding-left: 10rpx;
+}
+.page .contain .descript_wrap .descript_area {
+  padding-left: 10rpx;
+  padding-top: 10rpx;
+}
+.page .contain .descript_wrap .descript_area .descript_border {
+  padding: 10rpx;
+  border: solid 2rpx #1bb4ac;
+  border-radius: 6rpx;
+}
+.page .contain .descript_wrap .descript_area .descript_border .descript_input {
+  width: 100%;
+}
+.page .contain .btn_wrap {
+  flex: 2;
+}
+.page .contain .btn_wrap .sub_btn {
+  padding-top: 16rpx;
+}
+.page .contain .btn_wrap .res_btn {
+  padding-top: 12rpx;
+}
+.page .contain .img-wrap {
+  flex: 2;
+  color: #33373E;
+  margin-bottom: 10rpx;
+}
+.page .contain .img-wrap .txt {
+  padding-left: 10rpx;
+  margin-bottom: 20rpx;
+}
+.page .contain .img-wrap .imglist {
+  padding-left: 10rpx;
+  display: flex;
+  flex-wrap: wrap;
+}
+.page .contain .img-wrap .imglist .item {
+  width: 150rpx;
+  height: 150rpx;
+  margin-right: 22rpx;
+  margin-bottom: 10rpx;
+  position: relative;
+}
+.page .contain .img-wrap .imglist .item image {
+  width: 100%;
+  height: 100%;
+}
+.page .contain .img-wrap .imglist .item .delete {
+  width: 30rpx;
+  height: 30rpx;
+  position: absolute;
+  top: -14rpx;
+  right: -12rpx;
+}
+.page .contain .img-wrap .last-item {
+  width: 150rpx;
+  height: 150rpx;
+  text-align: center;
+  line-height: 146rpx;
+  border: 2rpx dashed #8B97A9;
+  box-sizing: border-box;
+}
